Fix landing page alignment

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -117,11 +117,10 @@
   font-size: 48px;
   text-align: center;
   color: white;
-  /* background-color: #000000; */
   padding: 30px;
   border-radius: 10px;
   max-width: 800px;
-  margin-top: -300px;
+  margin: 0 auto;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: bold;
 }
@@ -129,18 +128,15 @@
 .tagline1 {
   font-size: 25px;
   text-align: center;
+  margin: 0 auto; 
   color: white;
-  /* background-color: #000000; */
-  /* border-radius: 10px; */
   max-width: 900px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  /* font-weight: bolder; */
 }
 
 .tagline-container {
   display: flex;
   justify-content: center;
-  align-items: center;
   height: 100vh;
   margin: 0;
   /* font-family: Arial, sans-serif; */
@@ -204,5 +200,11 @@
 .explore-button-container {
   display: flex;
   justify-content: center;
-  margin-top: 30px;
+  margin-top: 50px;
 }
+
+.test {
+  margin-top: 100px;
+  justify-content: center;
+}
+
